{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 62,
  "lineage": "22c9ff22-e4fb-5b23-6bfa-0954f812cdbc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:internet-gateway/igw-0dccfbeef0c0b330a",
            "id": "igw-0dccfbeef0c0b330a",
            "owner_id": "212764686699",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-igw"
            },
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:route-table/rtb-0dffcb4f88420a036",
            "id": "rtb-0dffcb4f88420a036",
            "owner_id": "212764686699",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dccfbeef0c0b330a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "rtb-0dffcb4f88420a036",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00511ce1e2848aad2",
            "region": "eu-north-1",
            "route_table_id": "rtb-0dffcb4f88420a036",
            "subnet_id": "subnet-0ab1538dc5a683f4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d346fc51947223ce",
            "region": "eu-north-1",
            "route_table_id": "rtb-0dffcb4f88420a036",
            "subnet_id": "subnet-003260b10d439d851"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:security-group/sg-09fc10c05280cefa5",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fc10c05280cefa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tf-eks-cluster-nodes-sg",
            "name_prefix": "",
            "owner_id": "212764686699",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-eks-cluster-nodes-sg"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "sg-09fc10c05280cefa5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.100.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:subnet/subnet-0d03d526fb7617c5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d03d526fb7617c5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212764686699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-private-10.0.100.0/24"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-private-10.0.100.0/24"
            },
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "subnet-0d03d526fb7617c5d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:subnet/subnet-05d7283d5fb0833b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d7283d5fb0833b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212764686699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-private-10.0.101.0/24"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-private-10.0.101.0/24"
            },
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "subnet-05d7283d5fb0833b4",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:subnet/subnet-0ab1538dc5a683f4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab1538dc5a683f4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212764686699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-public-10.0.0.0/24"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public-10.0.0.0/24"
            },
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "subnet-0ab1538dc5a683f4b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:subnet/subnet-003260b10d439d851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003260b10d439d851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212764686699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-public-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-public-10.0.1.0/24"
            },
            "vpc_id": "vpc-05e0b19a1449a3855"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212764686699",
            "id": "subnet-003260b10d439d851",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:212764686699:vpc/vpc-05e0b19a1449a3855",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8b75360019db965",
            "default_route_table_id": "rtb-0125c041fa87504c2",
            "default_security_group_id": "sg-06e560e37fb872707",
            "dhcp_options_id": "dopt-0ff56641f87a3ed27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e0b19a1449a3855",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0125c041fa87504c2",
            "owner_id": "212764686699",
            "region": "eu-north-1",
            "tags": {
              "Name": "tf-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "tf-eks-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}